# personality_trip_recommender

./: .env.example  README.md  pyproject.toml
src/personality_trip_recommender/: crew.py  main.py
src/personality_trip_recommender/config/: agents.yaml  tasks.yaml
